[tool.poetry]
name = "pypsps"
version = "0.0.5"
description = "Predictive State Propensity Subclassification (PSPS) in Python (keras)"
authors = ["Georg M. Goerg <im@gmge.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gmgeorg/pypsps.git"

[tool.poetry.dependencies]
python = "^3.10"

numpy = ">=1.11.0"
pandas = ">=1.0.0"
tensorflow = ">=2.11.0"
tensorflow_probability = ">=0.18.0"
tf-keras = ">=2.14.1"
tqdm = ">=4.62"
tensorflow-addons = ">=0.15.0"
pypress = { git = "https://github.com/gmgeorg/pypress.git", rev = "v0.0.2" }

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = ">=6.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true

