[tool.poetry]
name = "pypsps"
version = "0.0.7"
description = "Predictive State Propensity Subclassification (PSPS) in Python (keras)"
authors = ["Georg M. Goerg <im@gmge.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gmgeorg/pypsps.git"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"

numpy = ">=1.11.0"
pandas = ">=1.0.0"
tensorflow = ">=2.11.0"
tensorflow_probability = ">=0.18.0"
tf-keras = ">=2.14.1"
tqdm = ">=4.62"
pypress = { git = "https://github.com/gmgeorg/pypress.git", rev = "v0.0.5" }

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = ">=6.1.1"
ruff = "^0.3.7"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
optuna = "^4.2.1"
pydot = "^3.0.4"
scikit-survival = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true
